--- a/index.html
+++ b/index.html
@@ -25,5 +25,216 @@
             </div>
         </div>
     </section>
+    <!-- 2nd section  -->
+    <section class="second-section">
+            <div class="left-side">
+                <div class="all-button">
+                    <a href="#">Upcoming Match</a>
+                    <a href="#">All Groups</a>
+                    <a id="red-button" href="#">Blogs</a>
+                </div>
+            </div>
+            <div class="right-side">
+                <!-- player card 1 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 2 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 3 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 4 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 5
+                 -->
+                 <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 6 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 7 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 8 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+                <!-- player card 9 -->
+                <div class="player-card">
+                    <div class="pcard-image">
+                        <img src="assets/Blog Image.png" alt="png">
+                    </div>
+                    <div class="button">
+                        <a href="#">Tranfer</a>
+                    </div>
+                    <div class="pcard-text">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                  <div class="icons">
+                    <div class=hour-icon>
+                        <i class="fa-solid fa-clock"></i>
+                        <span>10h</span>
+                    </div>
+                    <div class="message-icon">
+                        <i class="fa-solid fa-message"></i>
+                        <span>23</span>
+                    </div>
+                  </div>
+                </div>
+            </div>
+    </section>
 </body>
 </html>
