Mobile responsive done

--- a/index.html
+++ b/index.html
@@ -236,5 +236,30 @@
                 </div>
             </div>
     </section>
+    <footer class="footer">
+      <div class="footer-elements">
+        <div class="footer-text">
+            <h1>Goal</h1>
+        </div>
+        <div>
+            <hr>
+        </div>
+        <div class="footer-link">
+            <a href="#">contact us</a>
+            <a href="#">terms of service</a>
+            <a href="#">privacy policy</a>
+            <a href="#">privacy setting</a>
+            <a href="#">Goal app</a>
+            <a href="#">Goal Live</a>
+            
+        </div>
+        <div class="social-link">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
