match page link with the upcoming match button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="second-section">
             <div class="left-side">
                 <div class="all-button">
-                    <a href="#">Upcoming Match</a>
+                    <a href="match.html">Upcoming Match</a>
                     <a href="#">All Groups</a>
                     <a id="red-button" href="#">Blogs</a>
                 </div>
