soical link added

--- a/match.html
+++ b/match.html
@@ -16,8 +16,7 @@
         <div class="container">
             <div class="banner-text">
                 <h1>The Greatest show on the earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply 
-                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p>The object of the game, which is played on a wide rectangular field with a goal on each end of the field, is to score by putting the ball into the adversary goal.</p>
                     <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="banner-image">
@@ -175,21 +174,13 @@
               <div>
                   <hr>
               </div>
-              <div class="footer-link">
-                  <a href="#">contact us</a>
-                  <a href="#">terms of service</a>
-                  <a href="#">privacy policy</a>
-                  <a href="#">privacy setting</a>
-                  <a href="#">Goal app</a>
-                  <a href="#">Goal Live</a>
-                  
-              </div>
               <div class="social-link">
-                  <i class="fa-brands fa-facebook"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-youtube"></i>
-              </div>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+               <a href="https://www.youtube.com/"> <i class="fa-brands fa-youtube"></i></a>
+            </div>
+            
             </div>
           </footer>
 </body>
