--- a/match.html
+++ b/match.html
@@ -174,6 +174,15 @@
               <div>
                   <hr>
               </div>
+              <div class="footer-link">
+                <a href="#">contact us</a>
+                <a href="#">terms of service</a>
+                <a href="#">privacy policy</a>
+                <a href="#">privacy setting</a>
+                <a href="#">Goal app</a>
+                <a href="#">Goal Live</a>
+                
+            </div>
               <div class="social-link">
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
