--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <!-- Header Banner -->
+<!-- ist-section  -->
     <section class="ist-section">
         <div class="container">
             <div class="banner-text">
@@ -235,6 +236,7 @@
                 </div>
             </div>
     </section>
+<!-- Footer Section  -->
     <footer class="footer">
       <div class="footer-elements">
         <div class="footer-text">
